<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chips_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/photo_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

<com.google.android.material.chip.ChipGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:singleSelection="true"
    android:id="@+id/chip_group">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_two_days_ago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/two_days_ago"/>
<!--                app:chipBackgroundColor="@color/two_days_ago_back_color"-->
<!--                android:textColor="@color/chip_text_color"-->
<!--                android:textSize="@dimen/description_text_size"-->


            <com.google.android.material.chip.Chip
                android:id="@+id/chip_yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/one_day_ago"/>
<!--                android:textColor="@color/chip_text_color"-->
<!--                app:chipBackgroundColor="@color/yesterday_back_color"-->
<!--                android:textSize="@dimen/description_text_size"-->


            <com.google.android.material.chip.Chip
                android:id="@+id/chip_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/today"/>
<!--                android:textColor="@color/chip_text_color"-->
<!--                app:chipBackgroundColor="@color/today_back_color"-->
<!--                android:textSize="@dimen/description_text_size"-->

</com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/search_wiki"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:helperText="@string/wiki_helper_text"
            app:layout_constraintTop_toBottomOf="@id/creationDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_twotone_pageview_24"
            app:endIconCheckable="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/photo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips_layout"
            tools:text="NoNamePhoto" />


        <ImageView
            android:id="@+id/photo_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_gravity= "center"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_title"
            android:contentDescription="@string/photo_of_the_day"
            />

        <TextView
            android:id="@+id/creationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/date_of_creation"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_of_the_day" />

<!--    <HorizontalScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/creationDate"-->
<!--        android:id="@+id/scroll_view"-->
<!--        >-->
<!--        <TextView-->
<!--            android:id="@+id/photo_desription"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/margin_top"-->
<!--            android:textSize="@dimen/description_text_size"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->

<!--            tools:text="@string/description_text" />-->
<!--    </HorizontalScrollView>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

<!--    <include layout="@layout/bottom_sheet_description"/>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_sheet_description_container"
        android:background="@color/bottom_sheet_background"
        app:behavior_hideable="true"
        app:behavior_draggable="true"
        app:behavior_peekHeight="@dimen/bottom_sheet_height"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/photo_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/description_text_size"
            android:textStyle="italic"
            android:text="@string/picture_description_will_load_here"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/description_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/errorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/oops_error_occured"
        android:visibility="invisible"/>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>