<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chips_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/photo_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

<com.google.android.material.chip.ChipGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:singleSelection="true"
    android:id="@+id/chip_group">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_two_days_ago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/two_days_ago"
                android:fontFamily="@font/karla"
                android:textStyle="normal"
                android:textColor="@color/grey_black"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/one_day_ago"
                android:fontFamily="@font/karla"
                android:textStyle="normal"
                android:textColor="@color/grey_black"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/today"
                android:fontFamily="@font/karla"
                android:textStyle="normal"
                android:textColor="@color/grey_black"/>

</com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/search_wiki"
            app:hintTextColor="@color/grey_black"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:helperText="@string/wiki_helper_text"
            app:helperTextTextColor="@color/lighter_grey"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/photo_desсription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_twotone_pageview_24"
            app:endIconCheckable="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/description_text_size"
                android:textStyle="normal"
                android:fontFamily="@font/karla"
                android:textColor="@color/grey_black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/photo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:fontFamily="@font/karla"
            android:textColor="@color/light_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips_layout"
            tools:text="NoNamePhoto" />


        <ImageView
            android:id="@+id/photo_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_gravity= "center"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_title"
            android:contentDescription="@string/photo_of_the_day"
            />

        <TextView
            android:id="@+id/creationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/date_of_creation"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/karla"
            android:textColor="@color/grey_black"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_of_the_day" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/photo_desсription"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/description_text_size"
            android:textStyle="italic"
            android:fontFamily="@font/karla"
            android:textColor="@color/light_black"
            android:textIsSelectable="true"
            android:layout_marginStart="@dimen/epic_caption_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/creationDate"
                    />

    </androidx.constraintlayout.widget.ConstraintLayout>
